hover bouton restant

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <nav>
             <ul>
                 <li><a class="active" href="/">Accueil</a></li>
-                <li><a id="acc" href="#">Accompagnement <i class="fa-solid fa-caret-down"></i></a>
+                <li id="acc"><a href="#">Accompagnement <i class="fa-solid fa-caret-down"></i></a>
                     
                     <ul id="submenu">
                         <li> <a href="#">Accompagnement perso</a></li>
@@ -300,7 +300,7 @@
     </main>
     <footer>
         <div class="footer1">
-             <article>
+             <article class="art111">
                 <h2>À PROPOS</h2>
                 <p>SkillFacile est un collectif
                 d’indépendants dans les métiers du
